# CYM-NM28C5

./: CLAUDE.md  GPIO Map Between NM-RF-HAT and NM-CYD-C5.md  HERMES.md  NM-CYD-C5-pinmap.md  README.md  SMOKE_TEST.md
.claude/rules/: cym-dev-workflow.md  cym-memory-discipline.md  cym-release-workflow.md
.github/workflows/: deploy-flasher.yml  esp32c5-build-master.yml
ESP32C5/: .gitignore  CMakeLists.txt  README.md  partitions.csv  screen_connections_readme.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
ESP32C5/.github/scripts/: container_build.sh  flash_board.py
ESP32C5/binaries-esp32c5/: README.md
ESP32C5/components/cc1101/: CMakeLists.txt
ESP32C5/components/espressif__esp_lcd_ili9341/: esp_lcd_ili9341.c
ESP32C5/components/frame_analyzer/: CMakeLists.txt  frame_analyzer.c  frame_analyzer_parser.c
ESP32C5/components/hccapx_serializer/: CMakeLists.txt  hccapx_serializer.c
ESP32C5/components/rf_hat/: CMakeLists.txt
ESP32C5/components/rf_hat/include/: ir_hat.h  radio_hat.h  rf433_hat.h  rf_hat_config.h  rfid_hat.h
ESP32C5/components/rf_hat/src/: ir_hat.c  radio_hat.c  rf433_hat.c  rf_hat_config.c  rfid_hat.c
ESP32C5/components/rfid/: CMakeLists.txt
ESP32C5/components/rfid/include/: flipper_lf_file.h  flipper_nfc_file.h  rfid_manager.h  rfid_storage.h  rfid_types.h
ESP32C5/components/rfid/include/hf/: mifare_classic.h  ntag.h  pn532_driver.h  pn532_reader.h  pn532_target.h
ESP32C5/components/rfid/include/lf/: lf_reader_iface.h  lf_stub.h
ESP32C5/components/rfid/src/: flipper_lf_file.c  flipper_nfc_file.c  rfid_manager.c  rfid_storage.c  rfid_types.c
ESP32C5/components/rfid/src/hf/: mifare_classic.c  ntag.c  pn532_driver.c  pn532_reader.c  pn532_target.c
ESP32C5/components/rfid/src/lf/: lf_stub.c
ESP32C5/components/wifi_attacks/: CMakeLists.txt  wifi_attacks.c
ESP32C5/components/wifi_attacks/include/: wifi_attacks.h
ESP32C5/docs/: index.html  manifest.json
ESP32C5/main/: CMakeLists.txt  attack_handshake.c  attack_handshake.h  ble_blueduck.c  ble_blueduck.h  ble_honeypair.c  ble_honeypair.h  ble_whisperpair.c  ble_whisperpair.h  bt_lookout.c  bt_lookout.h  custom_ca_bundle.pem  deedee_img.c  dexter_img.c  dexter_img.h  ft6336.c  ft6336.h  gatt_walker.c  gatt_walker.h  idf_component.yml  lab_bg.c  lv_extra_symbols.c  lvgl_memory.c  lvgl_memory.h  main.c  oui_lookup.c  oui_lookup.h  sd_error_handler.c  sd_error_handler.h  xpt2046.c  xpt2046.h
docs/support_files/: oui.csv
resources/blueduck_scripts/: README.md  android_browser_url.duck  android_chrome_search.duck  android_notifications.duck  android_rickroll.duck  android_search.duck  android_settings_search.duck  windows_lock.duck  windows_notepad_msg.duck  windows_open_browser.duck  windows_rickroll.duck  windows_screenshot.duck  windows_sysinfo.duck  windows_task_manager.duck
resources/tpms_portapack_test/: README.md  tpms_315MHz_DEADBEEF_lowpressure.C16  tpms_315MHz_DEADBEEF_normal.C16
tools/: gen_tpms_c16.py  oui_convert.py
(+35 files in other folders)
